<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/server_preferences">
    
        <EditTextPreference
                android:key="server_url_preference"
                android:title="@string/title_server_preference"
                android:summary="@string/summary_server_preference"
                android:dialogTitle="@string/dialog_server_preference" />
        <EditTextPreference
                android:key="server_username_preference"
                android:title="@string/title_username_preference"
                android:summary="@string/summary_username_preference"
                android:dialogTitle="@string/dialog_username_preference" />
        <EditTextPreference
                android:key="server_password_preference"
                android:title="@string/title_password_preference"
                android:summary="@string/summary_password_preference"
                android:dialogTitle="@string/dialog_password_preference"
                android:password="true" />
    </PreferenceCategory>


</PreferenceScreen>
        